# jrl_walkgen_bridge

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  stack.xml
include/jrl_walkgen_bridge/: kajita.hh  morisawa.hh
samples/: tutorial_getting_started.py
src/libjrl_walkgen_bridge/: kajita.cpp  morisawa.cpp
src/nodes/: trajectory_server.cpp
